--- a/portfolio/felgen-wie-neu/index.html
+++ b/portfolio/felgen-wie-neu/index.html
@@ -130,7 +130,7 @@
 <p>This is a website for Dirk Ihmer, who restores rims ‘like new’ by sanding them down, coating them and finishing them. This impecable one-pager is less than 1Mb in size and has a beautiful subtle Ken Burns slider. This site is powered by Jekyll and the CloudCannon CMS.</p>
 
 
-<p><a href="//swift-goldfish.cloudvent.net/" rel="noopener" target="_blank">view website &rarr;</a></p>
+<p style="text-align: center;"><a href="//swift-goldfish.cloudvent.net/" rel="noopener" target="_blank">view website &rarr;</a></p>
 
 
 
