--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" /> 
 <title>I am a web developer based in Amsterdam | Usecue web development</title>
 
-<meta name="description" content="I create and host instantly loading websites and web applications for my clients. Interested?">
+<meta name="description" content="I create and host elegant, hand-coded websites and web applications for my clients. Interested?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -18,14 +18,14 @@
 <meta property="og:url" content="https://www.usecue.com/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I create and host instantly loading websites and web applications for my clients. Interested?"/>
+<meta property="og:description" content="I create and host elegant, hand-coded websites and web applications for my clients. Interested?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="I am a web developer based in Amsterdam" />
 
 <meta name="twitter:url" content="https://www.usecue.com/index.html" />
-<meta name="twitter:description" content="I create and host instantly loading websites and web applications for my clients. Interested?" />
+<meta name="twitter:description" content="I create and host elegant, hand-coded websites and web applications for my clients. Interested?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -40,20 +40,13 @@
   <div class="line line1"></div>
   <div class="line line2"></div>
   <div class="line line3"></div>
-  <div class="line line4"></div>
-  <div class="line line5"></div>
-  <div class="line line6"></div>
-  <div class="line line7"></div>
+
   
     <div id="splash">
       <div><span class="medium"><span><a href="/about/">u</a></span><span>s</span><span>e</span><span>c</span><span>u</span><span>e</span></span><span class="small">web development</span></div>
       <div class="line line1"></div>
       <div class="line line2"></div>
       <div class="line line3"></div>
-      <div class="line line4"></div>
-      <div class="line line5"></div>
-      <div class="line line6"></div>
-      <div class="line line7"></div>
     </div>
   
     <a id="logo" href="/" class=""><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
@@ -70,7 +63,7 @@
 
 <h1>I am a web developer based in Amsterdam</h1>
 
-<p>I create and host <a href="/blog/websites-that-load-instantly/">instantly loading websites</a> and web applications for my clients. <a href="/about/">Interested?</a></p>
+<p>I create and host elegant, hand-coded websites and web applications for my clients. <a href="/about/">Interested?</a></p>
 
 
 
