--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body id="top" class="error home bgcolor" style="background: #cc0000 url(/img/pattern1.png) left top;">
+<body id="top" class="error home bgcolor" style="background: #cc0000 url(/img/pattern1.png) left top; background-attachment: fixed;">
   <div id="pattern"></div>
   
     <a id="logo" href="/" style="background: #cc0000;"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
