--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
 
 <h1>about</h1>
 
-<p>My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft and founded ‘Usecue’ in 2007. My first priority is my family, but my work is absoluty number two. I love what I do, which is building beautiful websites and web applications.</p>
+<p>My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft and founded ‘Usecue’ in 2007. My first priority is my family, but my work is absolutely number two. I love what I do, which is building beautiful websites and web applications.</p>
 
 <p>All websites I build are well-coded and have good SEO. This is reflected by their excellent <a href="/blog/google-lighthouse-score/">Google score</a>, an objective quality measurement of a website. Quality is very important to me. I strongly believe that each job worth doing is worth doing well.</p>
 
