--- a/404.html
+++ b/404.html
@@ -36,8 +36,7 @@
 
 </head>
 
-<body id="top" class="error home bgcolor" style="background: #cc0000 url(/img/pattern2.png) left top; background-attachment: fixed;">
-  <div id="pattern" style="background-color: #cc0000;"></div>
+<body id="top" class="error home bgcolor" style="background: #cc0000;">
   <svg style="position: absolute; width: 100%; height: 100vh;">
     <defs>
       <clipPath id="clipping">
