--- a/portfolio/lucass-amsterdam/index.html
+++ b/portfolio/lucass-amsterdam/index.html
@@ -36,8 +36,7 @@
 
 </head>
 
-<body id="top" class="portfolio bgcolor" style="background: #3b7055 url(/img/pattern2.png) left top; background-attachment: fixed;">
-  <div id="pattern" style="background-color: #3b7055;"></div>
+<body id="top" class="portfolio bgcolor" style="background: #3b7055;">
   <svg style="position: absolute; width: 100%; height: 100vh;">
     <defs>
       <clipPath id="clipping">
