--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>I am a web developer based in Amsterdam | Usecue web development</title>
+<title>I am a web developer based in Amsterdam. | Usecue web development</title>
 
 <meta name="description" content="I create and host elegant, hand-coded websites and web applications for my clients. Interested?">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="I am a web developer based in Amsterdam"/>
+<meta property="og:title" content="I am a web developer based in Amsterdam."/>
 
 <meta property="og:url" content="https://www.usecue.com/index.html"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="I am a web developer based in Amsterdam" />
+<meta name="twitter:title" content="I am a web developer based in Amsterdam." />
 
 <meta name="twitter:url" content="https://www.usecue.com/index.html" />
 <meta name="twitter:description" content="I create and host elegant, hand-coded websites and web applications for my clients. Interested?" />
@@ -62,7 +62,7 @@
         <div id="content">
 
 
-<h1>I am a web developer based in Amsterdam</h1>
+<h1>I am a web developer based in Amsterdam.</h1>
 
 <p>I create and host elegant, hand-coded websites and web applications for my clients. <a href="/about/">Interested?</a></p>
 
