--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <div><span class="medium"><span><a href="/about/">u</a></span><span>s</span><span>e</span><span>c</span><span>u</span><span>e</span></span><span class="small">web development</span></div>
     </div>
   
+
+  
     <a id="logo" href="/" style=""><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
     <ul id="menu">
@@ -79,6 +81,8 @@
             if (localStorage.getItem('mode') == 'dark') document.getElementById('darkmode').classList.add('selected'); 
         </script>
     </div>
+    
+    <div id="darkmodeoverlay"></div>
 
     <div id="lightbox"></div>
     <script src="/js/javascript.js"></script>
