--- a/portfolio/usecue/index.html
+++ b/portfolio/usecue/index.html
@@ -42,6 +42,8 @@
   </script>
 
   
+
+  
     <a id="logo" href="/" style="background: #1111aa;"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
     <ul id="menu">
@@ -181,6 +183,8 @@
             if (localStorage.getItem('mode') == 'dark') document.getElementById('darkmode').classList.add('selected'); 
         </script>
     </div>
+    
+    <div id="darkmodeoverlay"></div>
 
     <div id="lightbox"></div>
     <script src="/js/javascript.js"></script>
