--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@
         
         
         <a id="scrolltotop" href="#top">Scroll to top</a>
-        <a id="darkmode" href="#" onclick="toggleDarkmode()"></a>
+        <a id="darkmode" href="#" onclick="toggleDarkmode()" title="toggle dark mode"></a>
         <script>
             if (localStorage.getItem('mode') == 'dark') document.getElementById('darkmode').classList.add('selected'); 
         </script>
