--- a/portfolio/usecue/index.html
+++ b/portfolio/usecue/index.html
@@ -178,7 +178,7 @@
             <a id="prevlinktop" href="/portfolio/studio-inhout/">previous item</a>
         
         <a id="scrolltotop" href="#top">Scroll to top</a>
-        <a id="darkmode" href="#" onclick="toggleDarkmode()"></a>
+        <a id="darkmode" href="#" onclick="toggleDarkmode()" title="toggle dark mode"></a>
         <script>
             if (localStorage.getItem('mode') == 'dark') document.getElementById('darkmode').classList.add('selected'); 
         </script>
