--- a/portfolio/studio-inhout/index.html
+++ b/portfolio/studio-inhout/index.html
@@ -118,7 +118,7 @@
 
 <h1 class="large">studio inHout</h1>
 
-<p>A 100% score in Google Lighthouse and less than 150 lines of CSS. A lightweight, blazing fast, simple and elegant website that does what it is supposed to do. Full-featured, responsive and CMS driven, without using a single line of jQuery!</p>
+<p><a href="/blog/how-to-get-a100-google-lighthouse-score/">A 100% score in Google Lighthouse</a> and less than 150 lines of CSS. A lightweight, blazing fast, simple and elegant website that does what it is supposed to do. Full-featured, responsive and CMS driven, without using a single line of jQuery!</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
