--- a/portfolio/de-reclamefabriek/index.html
+++ b/portfolio/de-reclamefabriek/index.html
@@ -43,7 +43,7 @@
   </script>
 
   
-
+  <div id="blobbox"><div id="blob"></div></div>
   
     <a id="logo" href="/" style="background: #016faa;"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
