--- a/nl/portfolio/petervermaat/index.html
+++ b/nl/portfolio/petervermaat/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">Peter Vermaat</h1>
 
-<p>Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was niet responsive en gebruikte WP Touch om toch een mobiele website weer te geven (met alle beperkingen vandien). Ik heb het thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshopje aan zijn website toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook!</p>
+<p>Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was niet responsive en gebruikte WP Touch om toch een mobiele website weer te geven (met alle beperkingen vandien). Hij wilde graag een update van zijn website. Ik heb het thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshopje aan zijn website toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook! Deze website kan makkelijk weer 5 jaar mee.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
