--- a/portfolio/petervermaat/index.html
+++ b/portfolio/petervermaat/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">Peter Vermaat</h1>
 
-<p>Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and used WP Touch to display a mobile website (with limitations). I rebuild his theme in Jekyll and connected the CloudCannon CMS. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a little webshop (including product presentations). Peter was very pleased with the end result and not unimportant: so was I!</p>
+<p>Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and used WP Touch to display a mobile website (with limitations). He asked me to update his website. I rebuild his theme in Jekyll and connected the CloudCannon CMS. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a little webshop (including product presentations). Peter was very pleased with the end result and not unimportant: so was I! This website will easily last another 5 years.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
